# risk-analysis

./: AGENTS.md  CLAUDE.md  NEW-PLAN.md  PLAN.md  README.md  skills-lock.json
.docs/: A4-SLUTSATS.md  FAS-B-FORKLARING.md  FAS-C-D-FORKLARING.md  FAS-F-REKOMMENDATIONER.md  GLM.md  NOTES-DESKRIPTIV.md  NOTES-FELIX.md  NOTES-HARALD.md  PLAN-ORDER.md  PLAN.md  REPORT.md  UTKAST.md
.docs/REPORT.md/: 0.RAPPORTPLAN.md  1.INLEDNING.md  2.ÄMNESBESKRIVNING.md  3.METOD.md  4.RESULTAT.md  5.ANALYS.md  6.SLUTSATS.md
analysis/: insurance_analysis.py
analysis/output/: claim_frequency_by_verksamhet.csv  correlation_matrix.csv  descriptive_summary.csv  least_uncertain_rows.csv  model_comparison.csv  (+4 more)
data/: Entreprenadförsäkring test.rds
frontend/: package.json
info/: Intro projekt.pptx  Uppgiftsbakgrund.docx  sammanfattning-kursbok.txt
presentation/: MANUS.md  risk-presentation.pptx  risk-presentation2.pptx  skapa_ekonomi_decil.py  skapa_heatmap.py  skapa_pptx.py
src/: README.md  descriptive-analysis.ipynb  pyproject.toml
src/analysis/: descriptive-analysis.ipynb
src/analysis/descriptive-analysis/: A1-datakontroll.ipynb  A2-grundlaggande-beskrivning.ipynb  A3-segmenterad-beskrivning.ipynb  A4-samvariation.ipynb  A5-figurer-och-sammanfattning.ipynb
src/analysis/predictive/: B1-grundspecifikation-arseffekt.ipynb  B1-variabelval-glm.ipynb  B2-modellkontroll-tolkning.ipynb  C-xgboost.ipynb  D1-modelljamforelse.ipynb  E-osakerhet.ipynb
src/analysis/predictive/artifacts/: C-best-config.json  C-candidates.csv
test-analysis/: README.md  report_draft.md  work_plan.md
(+21 files in other folders)
