[project]
name = "risk-analysis-src"
version = "0.1.0"
description = "Risk analysis environment for descriptive analysis, Poisson GLM, and gradient-boosted count models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.0",
    "nbconvert>=7.17.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.1.0",
]

[tool.uv]
package = false
